<resources>
  <string name="app_name" translatable="false">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint" translatable="false">FB</string>
  <string name="input_prefill"></string>
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="title_activity_stock_detail">StockDetailActivity</string>
  <string name="add_stock_button_description">Add Stock</string>
  <string name="parcelable_stock_data" translatable="false">stock_data</string>
  <string name="detail_stock" translatable="true">Stock</string>
  <string name="detail_bid_price" translatable="true">BID PRICE:</string>
  <string name="detail_change" translatable="true">CHANGE :</string>
  <string name="detail_change_perc" translatable="true">CHANGE%:</string>
  <string name="stock_graph_description" translatable="true">Stock price graph over last 7 days</string>
  <string name="empty_stock_list" translatable="true">No Stock information available</string>
  <string name="stock_already_saved_toast" translatable="true">This stock is already saved!</string>
  <string name="stock_not_exists_toast" translatable="true">Stock doesnt exist</string>
  <string name="empty_graph_text" translatable="true">Graph cannot be loaded. No internet connection</string>
  <string name="intent_symbol_string" translatable="false">symbol</string>
</resources>
