<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/stock_detail_layout"
    android:orientation="vertical"
    tools:context="com.sam_chordas.android.stockhawk.ui.StockDetailActivityFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Dark"
        android:layout_margin="@dimen/card_view_layout_margin">

    <com.db.chart.view.LineChartView
        xmlns:chart="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linechart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chart_view_layout_height"
        android:layout_margin="@dimen/chart_view_layout_margin"
        chart:chart_axisColor="@android:color/secondary_text_dark"
        chart:chart_labelColor="@android:color/secondary_text_dark"
        android:contentDescription="@string/stock_graph_description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:id="@+id/chart_fallback_text_view"
        android:text="@string/empty_graph_text"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardView.Dark"
        android:layout_margin="@dimen/card_view_layout_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@android:drawable/divider_horizontal_dark"
            android:layout_margin="@dimen/detail_stock_linear_layout_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/stock_detail_text_view"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:drawable/divider_horizontal_dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/md_listitem_vertical_margin"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/detail_bid_price"
                    android:contentDescription="@string/detail_bid_price"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/bid_price_text_view" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/detail_change"
                    android:contentDescription="@string/detail_change"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/change_text_view" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/detail_change_perc"
                    android:contentDescription="@string/detail_change_perc"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/change_perc_text_view" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
